golden/error/typecheck_duplicate_argument.test
-- @query q(dup: i32, dup: i32)
SELECT 1;


 --> stdin:1:22
  |
1 | -- @query q(dup: i32, dup: i32)
  |                       ^~~
Error: Redefinition of argument.

 --> stdin:1:12
  |
1 | -- @query q(dup: i32, dup: i32)
  |             ^~~
Note: First defined here.
